2008-10-16		olivier

	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Remove misleading
	  comment, the functionality works as expected.

2008-10-16		olivier

	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Add group
	  selection.

2008-10-12		olivier

	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Prevent
	  potential random memory access with broken settings.

2008-10-12		olivier

	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Fix layout not
	  being shown if no variant is selected.

2008-10-11	olivier

	* dialogs/keyboard-settings/xfce-keyboard-settings.c,
	  dialogs/keyboard-settings/keyboard-dialog.glade,
	  dialogs/keyboard-settings/Makefile.am,
	  xfce4-settings-helper/keyboard-layout.c,
	  xfce4-settings-helper/keyboard-layout.h,
	  xfce4-settings-helper/keyboards.c,
	  xfce4-settings-helper/main.c,
	  xfce4-settings-helper/Makefile.am,
	  configure.ac.in: Add keyboard layout selector

2008-10-10	olivier

	* dialogs/keyboard-settings/keyboard-dialog.glade:
	  Add gui for layout selection - There is no usable code yet, this
	  commit is to get the strings in for translators to be able to pick
	  up.

2008-10-10	olivier

	* dialogs/appearance-settings/appearance-dialog.glade:
	  Set zero page-size to adjustment for newer gtk+ version

2008-10-10	olivier

	* dialogs/appearance-settings/appearance-dialog.glade:
	  Add accelerator to labels for sound control

2008-10-10	olivier

	* xfsettingsd/registry.c: Use booleans for Net/EnableEventSounds and 
	  Net/EnableInputFeedbackSounds, as does gnome with gconf and xsettings
	  does not make a difference - This is required to make the UI work 
	  (Bug #4367 cont.)

2008-10-09	olivier

	* xfce4-settings/trunk/dialogs/appearance-settings/appearance-dialog.glade:
	  Use 'event sounds' in label for consistency

2008-10-09	olivier

	* xfce4-settings/trunk/configure.ac.in: Add optional UI options to 
	  enable/disable sounds in Camberra (Bug #4367) - continue

2008-10-09	olivier
