@@ -1,5 +1,6 @@
 4.5.92 (Xfce 4.6 beta2)
 
+  * Add an option to disable keyboard settings.
 
 4.5.91 (Xfce 4.6 beta1)
 
