@@ -1,3 +1,10 @@
+2008-10-18		olivier
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c,
+	  dialogs/keyboard-settings/keyboard-dialog.glade,
+	  xfce4-settings-helper/keyboard-layout.c: Add an option to disable 
+	  keyboard settings.
+
 2008-10-16		olivier
 
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Remove misleading
